Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13979

take care of rdonly mode for mdt_close

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      [11057.804617] Lustre: DEBUG MARKER: == sanity-lsnapshot test 1a: mount/umount lustre snapshot ============================================ 20:51:15 (1600721475)
      [11065.673014] loop: module loaded
      [11066.043730] LDISKFS-fs (loop1): mounted filesystem without journal. Opts: user_xattr,errors=remount-ro,data=ordered,noload,no_mbcache,nodelalloc
      [11066.046287] Turning device loop1 (0x700001) read-only
      [11066.047176] Lustre: 4360ab9d-MDT0000-osd: set dev_rdonly on this device
      [11066.340134] Lustre: 4360ab9d-MDT0000: Imperative Recovery enabled, recovery window shrunk from 300-900 down to 150-900
      [11091.349581] Lustre: 4360ab9d-MDT0000: Connection restored to 5eb637a0-1523-241d-8e04-f32d922badbe (at 0@lo)
      [11091.351284] Lustre: Skipped 1 previous similar message
      [11098.044696] Lustre: 4360ab9d-MDT0000: Connection restored to 0ca00f58-7f9e-ca4d-93e4-7db971cde8c1 (at 10.9.6.157@tcp)
      [11098.168208] LustreError: 3025:0:(osd_handler.c:1764:osd_trans_create()) 4360ab9d-MDT0000: someone try to start transaction under readonly mode, should be disabled.
      [11098.170701] CPU: 1 PID: 3025 Comm: mdt_rdpg00_001 Kdump: loaded Tainted: G           OE  ------------   3.10.0-1062.18.1.el7_lustre.ddn4.x86_64 #1
      [11098.172881] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [11098.174073] Call Trace:
      [11098.174592]  [<ffffffff9a37b416>] dump_stack+0x19/0x1b
      [11098.175544]  [<ffffffffc0fd0a6c>] osd_trans_create+0x5dc/0x620 [osd_ldiskfs]
      [11098.177240]  [<ffffffffc0e0a41a>] top_trans_create+0x8a/0x200 [ptlrpc]
      [11098.178458]  [<ffffffffc12a84dc>] lod_trans_create+0x3c/0x50 [lod]
      [11098.179590]  [<ffffffffc135d83d>] mdd_trans_create+0x3d/0x90 [mdd]
      [11098.180718]  [<ffffffffc1355bd3>] mdd_xattr_set+0x343/0x18b0 [mdd]
      [11098.181831]  [<ffffffffc12c0b2b>] ? lod_read_unlock+0x3b/0xd0 [lod]
      [11098.183020]  [<ffffffffc1346ceb>] ? mdd_read_unlock+0x3b/0xd0 [mdd]
      [11098.184269]  [<ffffffffc11e1a94>] mdt_set_som+0xf4/0x2f0 [mdt]
      [11098.185312]  [<ffffffffc11a8fca>] ? mdt_big_xattr_get+0x11a/0x810 [mdt]
      [11098.186493]  [<ffffffffc11e1f50>] mdt_lsom_update+0x120/0x440 [mdt]
      [11098.187617]  [<ffffffffc11d685f>] mdt_mfd_close+0x47f/0x870 [mdt]
      [11098.188717]  [<ffffffffc11dc371>] mdt_close_internal+0x121/0x220 [mdt]
      [11098.189867]  [<ffffffffc11dc6cb>] mdt_close+0x25b/0x7d0 [mdt]
      [11098.190924]  [<ffffffffc0df60c9>] ? tgt_request_preprocess.isra.27+0x299/0x7a0 [ptlrpc]
      [11098.192346]  [<ffffffffc0df736a>] tgt_request_handle+0xada/0x1570 [ptlrpc]
      [11098.193616]  [<ffffffffc096f247>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [11098.194905]  [<ffffffffc0d9ebfb>] ptlrpc_server_handle_request+0x24b/0xab0 [ptlrpc]
      [11098.196261]  [<ffffffff99cd3a33>] ? __wake_up+0x13/0x20
      [11098.197238]  [<ffffffffc0da2564>] ptlrpc_main+0xb34/0x1470 [ptlrpc]
      [11098.198355]  [<ffffffff99cd512e>] ? finish_task_switch+0x4e/0x1c0
      [11098.199435]  [<ffffffff9a380e02>] ? __schedule+0x402/0x840
      [11098.200453]  [<ffffffffc0da1a30>] ? ptlrpc_register_service+0xf80/0xf80 [ptlrpc]
      [11098.201826]  [<ffffffff99cc6321>] kthread+0xd1/0xe0
      [11098.202723]  [<ffffffff99cc6250>] ? insert_kthread_work+0x40/0x40
      [11098.203814]  [<ffffffff9a38ed37>] ret_from_fork_nospec_begin+0x21/0x21
      [11098.204966]  [<ffffffff99cc6250>] ? insert_kthread_work+0x40/0x40
      [11098.232411] CPU: 1 PID: 3025 Comm: mdt_rdpg00_001 Kdump: loaded Tainted: G           OE  ------------   3.10.0-1062.18.1.el7_lustre.ddn4.x86_64 #1
      [11098.234620] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [11098.235623] Call Trace:
      [11098.236170]  [<ffffffff9a37b416>] dump_stack+0x19/0x1b
      [11098.237110]  [<ffffffffc0fd0a6c>] osd_trans_create+0x5dc/0x620 [osd_ldiskfs]
      [11098.238376]  [<ffffffffc0e0a41a>] top_trans_create+0x8a/0x200 [ptlrpc]
      [11098.239535]  [<ffffffffc12a84dc>] lod_trans_create+0x3c/0x50 [lod]
      [11098.240639]  [<ffffffffc135d83d>] mdd_trans_create+0x3d/0x90 [mdd]
      [11098.241750]  [<ffffffffc1355bd3>] mdd_xattr_set+0x343/0x18b0 [mdd]
      [11098.242846]  [<ffffffffc12c0b2b>] ? lod_read_unlock+0x3b/0xd0 [lod]
      [11098.244045]  [<ffffffffc1346ceb>] ? mdd_read_unlock+0x3b/0xd0 [mdd]
      [11098.245184]  [<ffffffffc11e1a94>] mdt_set_som+0xf4/0x2f0 [mdt]
      [11098.246224]  [<ffffffffc11a8fca>] ? mdt_big_xattr_get+0x11a/0x810 [mdt]
      [11098.247408]  [<ffffffffc11e1f50>] mdt_lsom_update+0x120/0x440 [mdt]
      [11098.248520]  [<ffffffffc11d685f>] mdt_mfd_close+0x47f/0x870 [mdt]
      [11098.249612]  [<ffffffffc11dc371>] mdt_close_internal+0x121/0x220 [mdt]
      [11098.250759]  [<ffffffffc11dc6cb>] mdt_close+0x25b/0x7d0 [mdt]
      [11098.251807]  [<ffffffffc0df60c9>] ? tgt_request_preprocess.isra.27+0x299/0x7a0 [ptlrpc]
      [11098.253226]  [<ffffffffc0df736a>] tgt_request_handle+0xada/0x1570 [ptlrpc]
      [11098.254452]  [<ffffffffc096f247>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [11098.255717]  [<ffffffffc0d9ebfb>] ptlrpc_server_handle_request+0x24b/0xab0 [ptlrpc]
      [11098.257041]  [<ffffffff99cd3a33>] ? __wake_up+0x13/0x20
      [11098.257990]  [<ffffffffc0da2564>] ptlrpc_main+0xb34/0x1470 [ptlrpc]
      [11098.259104]  [<ffffffff99cd512e>] ? finish_task_switch+0x4e/0x1c0
      [11098.260142]  [<ffffffff9a380e02>] ? __schedule+0x402/0x840
      [11098.261202]  [<ffffffffc0da1a30>] ? ptlrpc_register_service+0xf80/0xf80 [ptlrpc]
      [11098.262502]  [<ffffffff99cc6321>] kthread+0xd1/0xe0
      [11098.263388]  [<ffffffff99cc6250>] ? insert_kthread_work+0x40/0x40
      [11098.264456]  [<ffffffff9a38ed37>] ret_from_fork_nospec_begin+0x21/0x21
      [11098.265601]  [<ffffffff99cc6250>] ? insert_kthread_work+0x40/0x40
      [11100.992977] Lustre: Failing over 4360ab9d-MDT0000
      [11100.994584] LustreError: 11-0: 4360ab9d-OST0000-osc-MDT0000: operation ost_disconnect to node 10.9.6.156@tcp failed: rc = -107
      [11101.102647] Lustre: server umount 4360ab9d-MDT0000 complete
      [11101.104280] Removing read-only on unknown block (0x700001)
      [11110.115328] Lustre: DEBUG MARKER: == sanity-lsnapshot test complete, duration 75 sec =================================================== 20:52:08 (1600721528)
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: