LU-13979 mdt: heed rdonly mode for mdt_close

Take care of rdonly mode of MDT device during mdt_close to
avoid the change of the device.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: Id86eaeb85cb0962560f6119a53f2b30dc96188db
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/40002
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>